<resources>
    <string name="app_name">Assignment01B</string>
    <string name="enter_temperature">Enter Temperature</string>
    <string name="temp_conversion_title">Temperature Conversion</string>
    <string name="temperature_label">"Temperature: "</string>
    <string name="conversion_label">Conversion:</string>
    <string name="select_conversion">Select Conversion:</string>
    <string name="reset_button">Reset</string>
    <string name="calculate_button">Calculate</string>
    <string name="entered_temp" />
    <string name="conversion_results">N/A</string>
    <string name="please_enter_a_valid_number">Please enter a valid number.</string>
</resources>